# game_master_four_wins

./: CMakeLists.txt  README.md  run.sh
src/: game.cpp  game.hpp  game_field.cpp  game_field.hpp  main.cpp  random_player.cpp
